--- a/fitfoodie-recipesearch/public/index.html
+++ b/fitfoodie-recipesearch/public/index.html
@@ -12,6 +12,8 @@
     <link rel="shortcut icon" href="%PUBLIC_URL%/recipes.png">
     <!-- Bootswatch theme -->
     <link href="https://stackpath.bootstrapcdn.com/bootswatch/4.1.2/materia/bootstrap.min.css" rel="stylesheet" integrity="sha384-5mtbl3D/NWE3adtPBX+YsVIhjrCzkc9MWi8qMUcsRKvXa0vuQUnGCVZEGm2Y0YYm" crossorigin="anonymous">
+    <!-- fa fa icons -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
